careeros_backend/deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: careeros
  labels:
    name: careeros
